--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "d3": "^7.9.0",
     "echarts": "^5.6.0",
     "echarts-gl": "^2.0.9",
+    "lucide-vue-next": "^0.542.0",
     "pinia": "^3.0.3",
     "three": "^0.180.0",
     "three-globe": "^2.44.0",
+    "vite": "^6.3.5",
     "vue": "^3.5.18",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1"
@@ -25,7 +27,6 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
-    "vite": "^7.1.2",
     "vue-tsc": "^3.0.5"
   }
 }
