--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://spacex-dashboard-api.onrender.com"
+      "destination": "https://spacex-dashboard-api.onrender.com/api/$1"
     }
   ],
   "headers": [
